--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header{
      grid-template-columns: 1fr auto;
       align-items: center; 
       padding: 10px 20px; 
-      background-color: ;
+      margin: 0 20px;
        color: white;
        border-bottom: 3px white solid;
 
@@ -54,12 +54,12 @@ h2:hover{
     background-color: #000B58;
 }
 
-.home{/* background-color:#2E5077*/; 
+.home{/* background-color:#2E5077*/
     text-align: center;
 }
 
 .about, h3 ,h5 ,h6{
-   /* border: 1px yellow solid*/;
+   /* border: 1px yellow solid*/
 text-align: center;
 margin: 10px;
 padding: 10px;
@@ -87,17 +87,18 @@ opacity: 0;
     color: #1f0530;
 }
 .home .image {
-    /*border: 1px red solid*/;
+    /*border: 1px red solid*/
     margin: 10px auto;
     width:fit-content ;
 object-fit: contain;
 }
 
 .home #imagemoi{
-width:400px ;
-height:50px ;
-k2
+width:400px;
+height:50px;
+
 }
+
 .home .home2{
     border: 2px black solid;
     padding:15px ;
